--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "date-fns-tz": "^3.2.0",
     "pinia": "^2.2.8",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
