--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.2.8",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
